--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
+    # ports:
+    #   - "3000:3000"
     environment:
       - DATABASE_URL=postgres://user:password@db:5432/socialmedia
     depends_on:
@@ -15,11 +15,13 @@ services:
       - app-network
     volumes:
       - ./src:/app/src
+    env_file:
+      - .env
 
   nginx:
     image: nginx:alpine
     ports:
-      - "8080:80"
+      - "${NGINX_PORT}:80"
     volumes:
       - ./src:/usr/share/nginx/html
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
