--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "socialmedia-api",
+  "name": "server",
   "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.9.0",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "form-data": "^4.0.2",
+    "node-fetch": "^2.6.8",
     "pg": "^8.11.3",
-    "cors": "^2.8.5"
+    "dotenv": "^16.4.5"
   }
 }
